fixing drop-down alignment:

--- a/ember/flightpubember/app/styles/app.css
+++ b/ember/flightpubember/app/styles/app.css
@@ -78,6 +78,7 @@ body{
 
 .drop-down{
 	position: absolute;
+	top: 50px;
 }
 
 .suggestions-box{
